# k8s-insider

./: .dockerignore  .krew.yaml  CHANGELOG.md  Dockerfile  Dockerfile.app  Dockerfile.controller  Dockerfile.network-manager  Dockerfile.router  Dockerfile.tunnel  LICENSE  README.md  RELEASE.md  build-push-local.sh  cliff.toml  dependabot.yml
.github/workflows/: docker-publish.yml  registry-publish.yml
app/: Cargo.toml  crates-release.toml
app/insider-macros/: Cargo.toml
app/insider-macros/src/: lib.rs
app/k8s-insider/: Cargo.toml  build.rs
app/k8s-insider-agent/: Cargo.toml
app/k8s-insider-agent/src/: error.rs  helpers.rs  main.rs  release.rs  wireguard.rs
app/k8s-insider-agent/src/controller/: mod.rs  network.rs  node.rs
app/k8s-insider-agent/src/controller/reconciler/: context.rs  error.rs  mod.rs  network.rs
app/k8s-insider-agent/src/network_manager/: allocations.rs  mod.rs  tunnel.rs
app/k8s-insider-agent/src/network_manager/reconciler/: context.rs  error.rs  mod.rs  tunnel.rs
app/k8s-insider-agent/src/reconciler/: context.rs  error.rs  mod.rs
app/k8s-insider-agent/src/router/: mod.rs  tunnel.rs  wg_config.rs
app/k8s-insider-agent/src/router/reconciler/: context.rs  error.rs  mod.rs
app/k8s-insider-core/: Cargo.toml
app/k8s-insider-core/src/: helpers.rs  ippair.rs  lib.rs
app/k8s-insider-core/src/detectors/: cluster_domain.rs  dns_service.rs  pod_cidr.rs  service_cidr.rs
app/k8s-insider-core/src/generators/: mod.rs  wireguard.rs
app/k8s-insider-core/src/ip/: addrpair.rs  mod.rs  netpair.rs  range.rs  schema.rs
app/k8s-insider-core/src/kubernetes/: mod.rs  operations.rs  service.rs
app/k8s-insider-core/src/resources/: annotations.rs  crd.rs  labels.rs  meta.rs  mod.rs  release.rs  templates.rs
app/k8s-insider-core/src/resources/agent/: deployment.rs  mod.rs  secret.rs  service_account.rs
app/k8s-insider-core/src/resources/controller/: configmap.rs  deployment.rs  mod.rs  rbac.rs  secret.rs
app/k8s-insider-core/src/resources/crd/: connection.rs  mod.rs
app/k8s-insider-core/src/resources/crd/v1alpha1/: addressallocation.rs  connection.rs  mod.rs  network.rs  tunnel.rs
app/k8s-insider-core/src/resources/router/: configmap.rs  deployment.rs  mod.rs  rbac.rs  secret.rs  service.rs
app/k8s-insider-core/src/resources/tunnel/: configmap.rs  deployment.rs  mod.rs  release.rs  service.rs
app/k8s-insider-core/src/tunnel_info/: handshakes.rs  mod.rs
app/k8s-insider-core/src/wireguard/: keys.rs
app/k8s-insider-info-server/: Cargo.toml
app/k8s-insider-info-server/src/: handshakes.rs  main.rs
app/k8s-insider-macros/: Cargo.toml
app/k8s-insider-macros/src/: lib.rs
app/k8s-insider/src/: cli.rs  context.rs  main.rs  output.rs  version.rs
app/k8s-insider/src/commands/: config_add_network.rs  config_add_tunnel.rs  config_list_networks.rs  config_list_tunnels.rs  config_remove_network.rs  config_remove_tunnel.rs  connect.rs  create_network.rs  create_tunnel.rs  delete_network.rs  delete_tunnel.rs  disconnect.rs  get_configuration.rs  install.rs  list.rs  list_networks.rs  list_tunnels.rs  mod.rs  patch_dns.rs  uninstall.rs  version.rs
app/k8s-insider/src/config/: mod.rs  network.rs  tunnel.rs
app/k8s-insider/src/detectors/: mod.rs  service_cidr.rs
app/k8s-insider/src/operations/: kubernetes.rs  mod.rs  wg_config.rs
app/k8s-insider/src/os/: linux.rs  mod.rs  windows.rs
app/k8s-insider/src/resources/: namespace.rs
app/k8s-insider/src/wireguard/: connection.rs  connection_manager.rs  helpers.rs  linux.rs  mod.rs  operations.rs  peer_config.rs
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
crd/v1alpha1/: addressallocations.k8s-insider.dev.yaml  connections.k8s-insider.dev.yaml  networks.k8s-insider.dev.yaml  tunnels.k8s-insider.dev.yaml
image/config-templates/: peer.conf  server.conf
image/etc/s6-overlay/s6-rc.d/confgen/: run
image/etc/s6-overlay/s6-rc.d/tunnel/: down  finish  run  up
images/controller/etc/s6-overlay/s6-rc.d/agent/: run
images/network-manager/etc/s6-overlay/s6-rc.d/agent/: run
images/router/etc/s6-overlay/s6-rc.d/agent/: run
images/router/etc/s6-overlay/s6-rc.d/confgen/: run  up
images/router/etc/s6-overlay/s6-rc.d/tunnel/: finish  run
images/tunnel/etc/s6-overlay/s6-rc.d/confgen/: run
images/tunnel/etc/s6-overlay/s6-rc.d/confwatch/: run
images/tunnel/etc/s6-overlay/s6-rc.d/infoserver/: run
images/tunnel/etc/s6-overlay/s6-rc.d/tunnel/: finish  run
tool/: Cargo.toml
tool/src/: cli.rs  helpers.rs  kubernetes.rs  main.rs
tool/src/commands/: connect.rs  install.rs  list.rs  mod.rs  uninstall.rs
tool/src/detectors/: cluster_domain.rs  dns_service.rs  pod_cidr.rs  service_cidr.rs
tool/src/operations/: kubernetes.rs  wg_config.rs
tool/src/resources/: configmap.rs  deployment.rs  labels.rs  mod.rs  namespace.rs  release.rs  service.rs
