[workspace]
members = [
    "k8s-insider",
    "k8s-insider-agent",
    "k8s-insider-core",
    "k8s-insider-macros",
]

[workspace.dependencies]
anyhow = "1.0.71"
derive_builder = { version = "0.12.0", features = ["clippy"] }
env_logger = "0.10.0"
futures = "0.3.28"
ipnet = "2.7.2"
k8s-openapi = { version = "0.18.0", features = ["v1_21"] }
kube = { version = "0.83.0", features = ["client", "rustls-tls", "kube-client", "ws", "kube-derive", "derive", "runtime"], default-features = false }
log = "0.4.19"
regex = "1.8.4"
serde = "1.0.164"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "io-util"] }
tokio-stream = { version = "0.1.14" }
wireguard-control = { git = "https://github.com/tonarino/innernet.git", rev = "dc7ae0e15c22648de99833871fb75ff019e93aca", version = "1.6.0" }
