[package]
name = "k8s-insider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.83.0", features = ["client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.18.0", features = ["v1_20"] }
clap = { version = "4.3.2", features = ["derive"] }
