[package]
name = "k8s-insider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.83.0", features = ["client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.18.0", features = ["v1_20"] }
clap = { version = "4.3.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
anyhow = "1.0.71"
derive_builder = { version = "0.12.0", features = ["clippy"] }
serde_yaml = "0.9.21"
serde = "1.0.164"
regex = "1.8.4"
