[package]
name = "k8s-insider-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
k8s-insider-core = { path = "../k8s-insider-core" }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["runtime"] }
log = { workspace = true }
thiserror = "1.0.40"
tokio = { workspace = true, features = ["rt-multi-thread"] }
