[package]
name = "k8s-insider-agent"
version = "0.3.4"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A controller daemon for k8s-insider enabled kubernetes clusters"
repository = "https://github.com/truegoric/k8s-insider"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
futures = "0.3.28"
ipnet = { workspace = true }
k8s-insider-core = { version = "0.3.4", path = "../k8s-insider-core" }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["runtime"] }
log = { workspace = true }
thiserror = "1.0.40"
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "fs"] }
tokio-stream = { workspace = true }
wireguard-control = { workspace = true }

[package.metadata.release]
release = false # temporarily, due to the dependency on wireguard-control
publish = false