[package]
name = "k8s-insider-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
kube = { version = "0.83.0", features = ["client", "rustls-tls", "kube-client", "ws", "kube-derive", "derive"], default-features = false }
k8s-openapi = { version = "0.18.0", features = ["v1_21"] }
log = "0.4.18"
regex = "1.8.4"
serde_yaml = "0.9.21"
serde = "1.0.164"
serde_json = "1.0.96"
schemars = { version = "0.8.12", features = ["chrono"] }
ipnet = "2.7.2"
wireguard-control = { git = "https://github.com/tonarino/innernet.git", tag = "v1.6.0", version = "1.6.0" }
