[package]
name = "k8s-insider-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.26", features = ["serde"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
ipnet = { workspace = true, features = ["schemars", "serde"] }
kube = { workspace = true }
k8s-openapi = { workspace = true }
log = { workspace = true }
regex = "1.8.4"
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = "3.0.0"
thiserror = { workspace = true }
wireguard-control = { git = "https://github.com/tonarino/innernet.git", tag = "v1.6.0", version = "1.6.0" }
futures = { workspace = true }
data-encoding = "2.4.0"
rand = "0.8.5"
num-traits = "0.2.15"
