[package]
name = "k8s-insider-core"
version = "0.3.0"
edition = "2021"
license = "GNU GPL 3 or later"
description = "Package containing shared dependencies for k8s-insider crates"
repository = "https://github.com/truegoric/k8s-insider"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.26", features = ["serde"] }
derive_builder = { workspace = true }
ipnet = { workspace = true, features = ["schemars", "serde"] }
kube = { workspace = true }
k8s-openapi = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = "3.0.0"
thiserror = { workspace = true }
futures = { workspace = true }
data-encoding = "2.4.0"
rand = "0.8.5"
num-traits = "0.2.15"
itertools = "0.11.0"
tokio = { workspace = true }
x25519-dalek = { version = "2.0.0-rc.3", features = ["static_secrets"] }
rand_chacha = "0.3.1"
