[package]
name = "k8s-insider-info-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
k8s-insider-core = { path = "../k8s-insider-core" }
serde = "1.0.164"
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
warp = { version = "0.3.5", features = ["tokio-rustls", "tls"] }
wireguard-control = { workspace = true }
