[package]
name = "k8s-insider-macros"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Package containing macros used by k8s-insider crates"
repository = "https://github.com/truegoric/k8s-insider"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.31"
syn = "2.0.26"
