[package]
name = "k8s-insider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
k8s-insider-core = { path = "../k8s-insider-core" }
kube = { workspace = true }
serde = "1.0.164"
serde_yaml = "0.9.21"

[dependencies]
k8s-insider-core = { path = "../k8s-insider-core" }
kube = { workspace = true }
k8s-openapi = { workspace = true }
clap = { version = "4.3.2", features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
ipnet = "2.7.2"
