[package]
name = "k8s-insider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
k8s-insider-core = { path = "../k8s-insider-core" }
kube = { workspace = true }
serde = "1.0.164"
serde_yaml = "0.9.21"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.3.2", features = ["derive"] }
env_logger = { workspace = true }
home = "0.5.5"
insider-macros = { path = "../insider-macros" }
ipnet = { workspace = true }
k8s-insider-core = { path = "../k8s-insider-core" }
k8s-openapi = { workspace = true }
kube = { workspace = true }
log = { workspace = true }
once_cell = "1.18.0"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
