[package]
name = "k8s-insider"
version = "0.3.4"
edition = "2021"
authors = ["Marcin Jędrasik <marcin.jedrasik@artifexidearum.net>"]
license = "GPL-3.0-or-later"
description = "A zero-config way to access your kubernetes cluster network"
readme = "../../README.md"
homepage = "https://github.com/truegoric/k8s-insider"
repository = "https://github.com/truegoric/k8s-insider"
keywords = ["kubernetes", "vpn", "developer-tools", "kubectl", "wireguard"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
k8s-insider-core = { version = "0.3.4", path = "../k8s-insider-core" }
kube = { workspace = true }
serde = "1.0.164"
serde_yaml = "0.9.21"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.3.2", features = ["derive"] }
env_logger = { workspace = true }
home = "0.5.5"
ipnet = { workspace = true }
k8s-insider-core = { version = "0.3.4", path = "../k8s-insider-core" }
k8s-insider-macros = { version = "0.3.4", path = "../k8s-insider-macros" }
k8s-openapi = { workspace = true }
kube = { workspace = true }
log = { workspace = true }
once_cell = "1.18.0"
regex = { workspace = true }
rust-ini = "0.19.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
